Add correct SelectionBound attributes for PDF touch selection handles.

At present, PDFWebContentsHelper fails to set the proper attributes
on SelectionBounds for the touch selection handles, meaning that they
continue to display, in the wrong position, after a selection has been
cleared.

The CL sets the attributes as expected.

Bug: 773265
Change-Id: I28bd4e61c9f2f5b672a468b5bee3b3f1a81bbda8
Reviewed-on: https://chromium-review.googlesource.com/709314
Reviewed-by: dsinclair <dsinclair@chromium.org>
Commit-Queue: James MacLean <wjmaclean@chromium.org>
Cr-Commit-Position: refs/heads/master@{#509044}
Former-commit-id: 8075cfc89c3acb11698f8b736687f9d0451d83b7