components/pdf/browser/pdf_web_contents_helper.cc
@@ -63,14 +63,19 @@ void PDFWebContentsHelper::SelectionChanged(const gfx::PointF& left,
     gfx::SelectionBound end;
     start.SetEdgeTop(left);
     start.SetEdgeBottom(gfx::PointF(left.x(), left.y() + left_height));
-    start.set_type(gfx::SelectionBound::LEFT);
-    start.set_visible(true);
     end.SetEdgeTop(right);
     end.SetEdgeBottom(gfx::PointF(right.x(), right.y() + right_height));
-    end.set_type(gfx::SelectionBound::RIGHT);
-    end.set_visible(true);
 
+    // Don't do left/right comparison after setting type.
+    // TODO(wjmaclean): When PDFium supports editing, we'll need to detect
+    // start == end as *either* no selection, or an insertion point.
     has_selection_ = start != end;
+    start.set_visible(has_selection_);
+    end.set_visible(has_selection_);
+    start.set_type(has_selection_ ? gfx::SelectionBound::LEFT
+                                  : gfx::SelectionBound::EMPTY);
+    end.set_type(has_selection_ ? gfx::SelectionBound::RIGHT
+                                : gfx::SelectionBound::EMPTY);
 
     touch_selection_controller_client_manager_->UpdateClientSelectionBounds(
         start, end, this, this);
